# stews-bot

./: .gitignore  README.md  a.out  birthday_notifier.py  chatbot.py  chatbotmodel.h5  classes.pkl  constants.py  date_object.py  emoji_response.py  imports.py  inspire_command.py  intents.json  keep_alive.py  main.py  memes_command.py  pygithub.py  pyproject.toml  quotes_inventory.py  sample.env  testing_commits.py  testing_commits_add  testing_commits_add.c  testing_commits_remove.c  training.py  update_checker_cache.pkl  words.pkl
Auto-Push/: pygithub.py  test_file.txt
AutoPush/: push_to_github.py  pygithub.py
MessageTriggerCommands/: command_functions.py  hello_command.py  triggers.py
ml_data/: chatbotmodel.h5  words.pkl
openai/: main_api.py
