[tool.poetry]
name = "repl_python3_Stews-Bot"
version = "0.1.0"
description = ""
authors = ["stewietheangel <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.0.1"
flask = "^2.0.1"
praw = "^7.3.0"
emoji = "^1.2.0"
python-dotenv = "^0.18.0"
Random-Word = "^1.0.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
